File stuff nearly works

--- a/code/python/config.cfg
+++ b/code/python/config.cfg
@@ -1,2 +1,2 @@
-mainDir:/run/media/josh/USB/
+mainDir:/run/media/josh/USB/nea-12ColcloughJ-master/EncryptedDir/
 assetsDir:/run/media/josh/USB/nea-12ColcloughJ-master/assets/exports/
