Added cross-platform support.
Works on Windows now as long as you install dependencies.

--- a/code/python-go/config.cfg
+++ b/code/python-go/config.cfg
@@ -1,2 +1,3 @@
-vaultDir:/run/media/josh/Storage/EncryptedDir/
-assetsDir:/run/media/josh/Storage/nea-12ColcloughJ-master/assets/exports/
+vaultDir--/run/media/josh/Storage/EncryptedDir/
+assetsDir--/run/media/josh/Storage/nea-12ColcloughJ-master/assets/exports/
+bluetooth--True
